RESOLVED FIXED208221
PDFPlugin: 'Open in Preview' and 'Save' don't work for blobs
https://bugs.webkit.org/show_bug.cgi?id=208221
Summary PDFPlugin: 'Open in Preview' and 'Save' don't work for blobs
Tim Horton
Reported 2020-02-25 15:44:53 PST
PDFPlugin: 'Open in Preview' and 'Save' don't work for blobs
Attachments
Patch (4.19 KB, patch)
2020-02-25 15:45 PST, Tim Horton
no flags
Tim Horton
Comment 1 2020-02-25 15:45:03 PST
Tim Horton
Comment 2 2020-02-25 15:45:05 PST
Alex Christensen
Comment 3 2020-02-25 15:56:09 PST
Comment on attachment 391693 [details] Patch test?
Tim Horton
Comment 4 2020-02-25 16:01:58 PST
Of the PDFPlugin HUD? None exist. It's nontrivial, though probably not impossible. Of some special just-for-testing SPI? I don't love those.
WebKit Commit Bot
Comment 5 2020-02-25 16:21:01 PST
Comment on attachment 391693 [details] Patch Clearing flags on attachment: 391693 Committed r257390: <https://trac.webkit.org/changeset/257390>
WebKit Commit Bot
Comment 6 2020-02-25 16:21:02 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.